--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,17 @@
 {
-    "manifest_version": 3,
-    "name": "skip test",
-    "version": "1.0",
-    "description": "test",
-    "content_scripts": [
-      {
-        "matches": ["https://www.youtube.com/watch*"],
-        "css": ["styles.css"],
-        "js": ["contentScript.js"]
-      }
-    ]
+  "manifest_version": 3,
+  "name": "skip test",
+  "version": "1.0",
+  "description": "test",
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": [
+    "storage",
+    "activeTab",
+    "scripting"
+  ],
+  "action": {
+    "default_popup": "popup.html"
   }
+}
